# gPIE

./: .coverage  CHANGELOG.md  README.md  __init__.py  pyproject.toml  requirements-dev.txt  requirements-optional.txt  requirements.txt  setup.py
core/: __init__.py  linalg_utils.py  metrics.py  rng_utils.py  types.py  uncertain_array.py  uncertain_array_tensor.py
examples/: 01_basic_graph.ipynb  graph.html  io_utils.py  readme.md  test_add.ipynb  test_combine_performance.ipynb  test_compressive_sensing.ipynb  test_fourier_propagator.ipynb  test_graph.ipynb  test_multiply.ipynb  test_phase_retrieval.ipynb  test_prior.ipynb  test_sampling.ipynb  test_uncertain_array.ipynb  test_wave.ipynb
gpie/: .coverage  LICENSE  __init__.py
gpie.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
graph/: __init__.py  factor.py  prior.py  shortcuts.py  wave.py
profile/: README.md  benchmark_coded_diffraction_pattern.py  benchmark_holography.py  benchmark_ptychography.py  benchmark_random_cdi.py  benchmark_utils.py  note.txt
test/: graph.html  test_accumulative_uncertain_array.py  test_adaptive_damping.py  test_add.ipynb  test_add_const_propagator.py  test_add_propagator.py  test_amplitude_measurement.py  test_backend.ipynb  test_binary_propagator.py  test_blocks.py  test_coded_diffraction_pattern.py  test_compressive_sensing.ipynb  test_compressive_sensing.py  test_const_wave.py  test_dtype.py  test_factor.py  test_fft.py  test_fft_2d_propagator.py  test_fork_propagator.py  test_fourier_compressive_sensing.py  test_fourier_propagator.ipynb  test_gaussian_measurement.py  (+51 more)
(+151 files in other folders)
